# ci-examples

./: .gitignore  Cargo.toml  README.md  binding.gyp  move_files.py  package.json  pnpm-lock.yaml
.cargo/: config.toml
.github/workflows/: build.yml  cross-os.yml  sharding.yml
benchmark/: dir-read.js  file-read.js  file-write.js
src/: addon.cc  lib.rs
test/: index.js
